<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/firstLoadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/lato_bold"
        android:text="@string/welcome_msg"
        android:textColor="@color/colorText"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/firstNameEntry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/first_name_qry"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/userFirstName"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/hint_first_name"
            android:inputType="text"
            android:background="@color/white"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:autofillHints="" tools:targetApi="o" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/lastNameEntry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/last_name"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/userLastName"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/last_name"
            android:inputType="text"
            android:background="@color/white"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/heightEntry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/height"
            android:layout_marginEnd="20sp"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/userHeightFt"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/default_zero"
            android:inputType="number"
            android:background="@color/white"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginStart="10sp"
            android:text="@string/feet_text"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/userHeightInch"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/default_zero"
            android:inputType="number"
            android:background="@color/white"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginStart="10sp"
            android:text="@string/inch_text"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/getStartedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_rounded"
        android:drawableStart="@drawable/ic_check_white_24dp"
        android:drawablePadding="5dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="80sp"
        android:text="@string/get_started_msg"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />


</LinearLayout>