...
        android:layout_height="wrap_content"
        android:forceHasOverlappingRendering="false"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_notif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#00111010"
            app:srcCompat="@android:drawable/ic_dialog_email" />
    </LinearLayout>
...
            android:backgroundTint="@color/stop"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />


        <Button
            android:id="@+id/addBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:drawableStart="@drawable/ic_add_white_24dp"
            android:drawablePadding="5dp"
...
